# cpp-project-utils

./: LICENSE  README.md  setup-dev-env.bat
src/: install-create-cpp-project-reg.ps1  project-tool.ps1  uninstall-create-cpp-project-reg.ps1
templates/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
templates/.cmake/: generate-licenses.cmake  generate_licenses.cmake
