cmake_minimum_required(VERSION %VERSION_HERE%)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/.bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/.bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/.bin)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SOURCE_FILES
)

project(%PROJECT_NAME_HERE%)

add_executable(%PROJECT_NAME_HERE% ${SOURCE_FILES})

# --------------------------------------------------
# Generate THIRD_PARTY_LICENSES.txt
# --------------------------------------------------

if(DEFINED VCPKG_INSTALLED_DIR AND DEFINED VCPKG_TARGET_TRIPLET)
    add_custom_command(TARGET Tetris POST_BUILD
		COMMAND ${CMAKE_COMMAND}
			-D VCPKG_SHARE_DIR="${VCPKG_SHARE_DIR}"
			-D LICENSE_OUTPUT="$<TARGET_FILE_DIR:%PROJECT_NAME_HERE%>/THIRD_PARTY_LICENSES.txt"
			-P "${CMAKE_CURRENT_SOURCE_DIR}/.cmake/generate_licenses.cmake"
	)
endif()